Removed test cases temporarily and remove IOUtils